--- a/styles.css
+++ b/styles.css
@@ -498,21 +498,30 @@ input {
     margin-top: -80px;
 }
 
-.thankyou{
-    width: 60vw;
-}
+.thankyou {
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 1fr; 
+    gap: 0px 0px; 
+    grid-template-areas: 
+      "thankyouimage thankyoutext"; 
+  }
 
-.thankyouimage{
+  .thankyouimage { 
+    grid-area: thankyouimage;
     height: 80vh;
     margin-top: 15vh;
     float: left;
     margin-left: 100px;
 }
 
-.thankyoutext{
+  .thankyoutext { 
+    grid-area: thankyoutext;
     margin-top: 50vh;
     float: right;
+    font-family: arial;
 }
+
 
 
 /*animation on scroll*/
