--- a/styles.css
+++ b/styles.css
@@ -898,4 +898,25 @@ input {
         width: 350px;
         margin-left: 35px;
     }
+
+    .thankyou {
+        display: flex; 
+        flex-wrap: wrap;
+        align-items: center;
+        flex-direction: column;
+        grid-template-areas: 
+          "thankyoutext"
+          "thankyouimage"; 
+      }
+
+    .thankyoutext{
+        width: 300px;
+        margin-top: 0px;
+    }
+    
+    .thankyouimage{
+        margin-left: 0px;
+        margin-top: 10px;
+        width: 400px;
+    }
 }
