adding ultra crew app to project page

--- a/styles.css
+++ b/styles.css
@@ -446,7 +446,9 @@ input {
 .placeholder{
     width: 300px;
     height: 300px;
+    background-color: #b0c49c;
 }
+
 .placeholder:hover{
     width: 500px;
     display: none;
