--- a/styles.css
+++ b/styles.css
@@ -505,12 +505,16 @@ input {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100%;
-  height: 2vh;
+  height: 5vh;
   font-family: 'open sans';
   color: #fff;
   font-weight: bold;
   position: fixed;
   bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* END FOOTER */
 
