updating site content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,14 +30,14 @@ const avatarSrcs: Array<string> = [
 <MainLayout>
   <AnnouncementBanner
     btnId="dismiss-button"
-    btnTitle="Explore ScrewFast on GitHub"
+    btnTitle="Explore GreenField Dev on GitHub"
     url="https://github.com/mearashadowfax/ScrewFast"
   />
 
   <HeroSection
     title=`Equip Your Projects with <span
-        class="text-yellow-500 dark:text-yellow-400">ScrewFast</span>`
-    subTitle="Top-quality hardware tools and expert construction services for every project need."
+        class="text-green-500 dark:text-green-400">GreenField Dev</span>`
+    subTitle="Top-quality web, mobile, and expert construction services for all your project needs."
     primaryBtn="Start Exploring"
     primaryBtnURL="/products"
     secondaryBtn="Contact Sales Team"
@@ -139,7 +139,7 @@ const avatarSrcs: Array<string> = [
 
   <HeroSectionAlt
     title="Let's Build Together"
-    subTitle="ScrewFast is an open-source template, meticulously crafted with Astro, Tailwind CSS, and Preline UI frameworks."
+    subTitle="GreenField Development offers top-tier web and mobile application services. Reach out to our team to discuss your project needs and craft the perfect solution."
     url="https://github.com/mearashadowfax/ScrewFast"
   />
 </MainLayout>
