--- a/src/components/sections/FooterSection.astro
+++ b/src/components/sections/FooterSection.astro
@@ -83,7 +83,8 @@ const sectionThreeContent: string =
       </div>
 
       <!-- Social Brands -->
-      <div>
+      {
+        /*<div>
         <FooterSocialLink url={strings.socialLinks.facebook}
           ><Icon name="facebookFooter" />
         </FooterSocialLink>
@@ -103,7 +104,8 @@ const sectionThreeContent: string =
         <FooterSocialLink url={strings.socialLinks.slack}
           ><Icon name="slackFooter" />
         </FooterSocialLink>
-      </div>
+      </div>*/
+      }
     </div>
 
     <script>
