--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const avatarSrcs: Array<string> = [
   />
 
   <HeroSection
-    title=`Equip Your Projects with <span
+    title=`Start Your Projects with <span
         class="text-green-500 dark:text-green-400">GreenField Dev</span>`
     subTitle="Top-quality web, mobile, and expert construction services for all your project needs."
     primaryBtn="Start Exploring"
